// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`alarms-list-remediation-instructions-filters Renders \`alarms-list-remediation-instructions-filters\` with access, but without filters filters props 1`] = `
<div
  class="layout row wrap align-center"
>
  <remediation-instructions-filters-list-stub
    closable="true"
    filters=""
  />
  <remediation-instructions-filters-list-stub
    closable="true"
    editable="true"
    filters=""
  />
  <button
    class="mx-1 my-0 v-btn v-btn--icon theme--light"
    type="button"
  >
    <div
      class="v-btn__content"
    >
      <i
        aria-hidden="true"
        class="v-icon material-icons theme--light"
      >
        assignment
      </i>
    </div>
  </button>
  <span
    class="v-tooltip v-tooltip--bottom"
  >
    <transition-stub
      name="slide-y-transition"
    />
  </span>
</div>
`;

exports[`alarms-list-remediation-instructions-filters Renders \`alarms-list-remediation-instructions-filters\` with custom props 1`] = `
<div
  class="layout row wrap align-center"
>
  <remediation-instructions-filters-list-stub
    closable="true"
    filters="[object Object],[object Object]"
  />
  <remediation-instructions-filters-list-stub
    closable="true"
    editable="true"
    filters="[object Object],[object Object]"
  />
  <button
    class="mx-1 my-0 v-btn v-btn--icon theme--light"
    type="button"
  >
    <div
      class="v-btn__content"
    >
      <i
        aria-hidden="true"
        class="v-icon material-icons theme--light primary--text"
      >
        assignment
      </i>
    </div>
  </button>
  <span
    class="v-tooltip v-tooltip--bottom"
  >
    <transition-stub
      name="slide-y-transition"
    />
  </span>
</div>
`;

exports[`alarms-list-remediation-instructions-filters Renders \`alarms-list-remediation-instructions-filters\` with default props 1`] = `
<div
  class="layout row wrap align-center"
>
  <remediation-instructions-filters-list-stub
    filters=""
  />
  <remediation-instructions-filters-list-stub
    filters=""
  />
  <!---->
</div>
`;

exports[`alarms-list-remediation-instructions-filters Renders \`alarms-list-remediation-instructions-filters\` with locked filters props 1`] = `
<div
  class="layout row wrap align-center"
>
  <remediation-instructions-filters-list-stub
    filters="[object Object],[object Object]"
  />
  <remediation-instructions-filters-list-stub
    filters=""
  />
  <button
    class="mx-1 my-0 v-btn v-btn--icon theme--light"
    type="button"
  >
    <div
      class="v-btn__content"
    >
      <i
        aria-hidden="true"
        class="v-icon material-icons theme--light primary--text"
      >
        assignment
      </i>
    </div>
  </button>
  <span
    class="v-tooltip v-tooltip--bottom"
  >
    <transition-stub
      name="slide-y-transition"
    />
  </span>
</div>
`;
